--- a/dean/main.html
+++ b/dean/main.html
@@ -19,7 +19,7 @@
       <div id="gnb">
         <a href="http://officialdean.com/"><img src="img/logo_96x60.png" alt="official dean"></a>
 
-        <ul>
+        <ul class="yel">
           <li>biography</li>
           <li>news</li>
           <li>sns</li>
@@ -27,7 +27,7 @@
           <li>contact</li>
         </ul>
       </div>
-    </section>
+    </section><!-- /gnb_wrap -->
 
 <!-- ======================================================================= -->
 
@@ -64,7 +64,7 @@
       <!-- soundcloud -->
       <section id="soundcloud">
         			<center><iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/213045110&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></center>
-      </section>
+      </section><!-- /soundcloud -->
 
 <!-- ======================================================================= -->
 
@@ -93,7 +93,7 @@
         </div>
 
         <p><a href="http://www.youtube.com/deantheofficial"><em><span>&gt;&gt;For more videos, CLICK HERE&lt;&lt;</span></em></a></p>
-      </section>
+      </section><!-- /MV -->
 
 <!-- ======================================================================= -->
 
@@ -171,24 +171,24 @@
           </div>
 
         </div>
-      </section>
+      </section><!-- /news -->
 
 <!-- ======================================================================= -->
 
       <!-- sns -->
       <section id="sns">
-
-        <div id="instagram_box">
-          <div class="icon_box">
-            <a href="https://instagram.com/deantrbl/"><i class="fa fa-instagram yel"></i></a>
+        <div class="sns_header">
+          <div id="instagram_box">
+            <div class="icon_box">
+              <a href="https://instagram.com/deantrbl/"><i class="fa fa-instagram yel"></i></a>
+            </div>
+            <p>Unable to show Instagram photos</p>
           </div>
-          <p>Unable to show Instagram photos</p>
-        </div>
 
-        <div id="twitter_box">
-          <a href="https://twitter.com/deantheofficial"><i class="fa fa fa-twitter yel"></i></a>
-          <aside class="twitter_txt">
-          </aside>
+          <div id="twitter_box">
+            <a href="https://twitter.com/deantheofficial"><i class="fa fa fa-twitter yel"></i></a>
+            <aside id="twitter_txt"></aside>
+          </div>
         </div>
 
         <!-- instagram -->
@@ -202,12 +202,540 @@
           <img src="img/sns_7.jpg" alt="">
         </div>
 
-      </section>
+      </section><!-- /sns -->
+
+<!-- ======================================================================= -->
+
+      <!-- upcoming show -->
+      <section id="upcomingshow">
+        <h1 class="yel">upcoming shows</h1>
+
+        <div class="show_wrap">
+
+          <div class="show_title">2017 May</div>
+          <div class="show_desc">
+            <dl>
+              <dt>Seoul, South Korea</dt>
+              <dd>Greenpluged Seoul 2017 @ Nanji Han River Park</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2017 February</div>
+            <div class="show_desc">
+              <dl>
+                <dt>4th</dt>
+                <dt>Ulsan, South Korea</dt>
+                <dd>Performance @ Club Gate</dd>
+              </dl>
+
+              <dl>
+                <dt>11th</dt>
+                <dt>Seoul, South Korea</dt>
+                <dd>Opening Party @ HiddenGround</dd>
+              </dl>
+
+              <dl>
+                <dt>12th</dt>
+                <dt>Seoul, South Korea</dt>
+                <dd>the Monster 3 @ Yes24 Livehall</dd>
+              </dl>
+          </div>
+
+          <div class="show_title">The end of the 2016</div>
+          <div class="show_desc">
+            <dl>
+              <dt>9th</dt>
+              <dt>Los Angeles, The United States</dt>
+              <dd>Transparent Live Session @ Mayan Theater</dd>
+            </dl>
+
+            <dl>
+              <dt>23th, 24th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>DEAN with CLUB ESKIMO @ Hyundai card Understage</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 November</div>
+          <div class="show_desc">
+            <dl>
+              <dt>4th</dt>
+              <dt>Cheonan, South Korea</dt>
+              <dd>performance @ Club Salt</dd>
+            </dl>
+
+            <dl>
+              <dt>6th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>No Sleep Till @Olympic Hall</dd>
+            </dl>
+
+            <dl>
+              <dt>12th</dt>
+              <dt>Incheon, South Korea</dt>
+              <dd>Performance @Club Button</dd>
+            </dl>
+
+            <dl>
+              <dt>19th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Resffect Melody @ Blue Square</dd>
+            </dl>
+
+            <dl>
+              <dt>22th</dt>
+              <dt>Tokyo, Japan</dt>
+              <dd>TRAP SOUL @Sound Museum Vision</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 October</div>
+          <div class="show_desc">
+            <dl>
+              <dt>1st</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>We are the hiphop @ Yes24 live hall</dd>
+            </dl>
+
+            <dl>
+              <dt>6th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Performance @Seoul National Univ</dd>
+            </dl>
+
+            <dl>
+              <dt>7th</dt>
+              <dt>Daegu, South Korea</dt>
+              <dd>Performance @Yeungnam University College</dd>
+            </dl>
+
+            <dl>
+              <dt>8th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>The Cry Ground @ Nanji Hanggang park</dd>
+            </dl>
+
+            <dl>
+              <dt>13th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Performance @Hansung University<</dd>
+            </dl>
+
+            <dl>
+              <dt>14th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Soul &amp; Groov @Yeungnam University College</dd>
+            </dl>
+
+            <dl>
+              <dt>15th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Seoul Fashion festival @ Jamsil Olympic stadium</dd>
+            </dl>
+
+            <dl>
+              <dt>23rd</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Picnic Concert @Olympic Stadium</dd>
+            </dl>
+
+            <dl>
+              <dt>29th</dt>
+              <dt>Busan, South Korea</dt>
+              <dd>Picnic festival @ Busan Asiad Main stadium</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 September</div>
+          <div class="show_desc">
+            <dl>
+              <dt>3rd</dt>
+              <dt>Gwangju, South Korea</dt>
+              <dd>Brother @ Gwangju Yeomju Gymnasium</dd>
+            </dl>
+
+            <dl>
+              <dt>4th</dt>
+              <dt>Seoul, South Korea</dt>]
+              <dd>Someday festival @ Nanji Hangang Park</dd>
+            </dl>
+
+            <dl>
+              <dt>10th ~ 12th</dt>
+              <dt>Malaysia</dt>
+              <dd>Promo Tour</dd>
+            </dl>
+
+            <dl>
+              <dt>14th</dt>
+              <dt>Singapore</dt>
+              <dd>Promo Tour</dd>
+            </dl>
+
+            <dl>
+              <dt>17th</dt>
+              <dt>Jeju-do, South Korea</dt>
+              <dd>Wonderland in Jeju @Let&#8217;s Run park</dd>
+            </dl>
+
+            <dl>
+              <dt>21st</dt>
+              <dt>Dajeon, South Korea</dt>
+              <dd>Performance @Chungnam Univ<</dd>
+            </dl>
+
+            <dl>
+              <dt>22th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Performance @Seogang Univ</dd>
+            </dl>
+
+            <dl>
+              <dt>23rd</dt>
+              <dt>Suwon, South Korea</dt>
+              <dd>Performance @Suwon Woman Univ</dd>
+            </dl>
+
+            <dl>
+              <dt>24th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>The Monser #1 @ Yes24 Livehall</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 August</div>
+          <div class="show_desc">
+            <dl>
+              <dt>5th ~ 6th</dt>
+              <dt>Manila, Philippines</dt>
+            </dl>
+
+            <dl>
+              <dt>14th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Seoul Soul Festival @ Jamsil Sports Complex</dd>
+            </dl>
+
+            <dl>
+              <dt>0th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Cass Blue Playground @ Jamsil Sports Complex</dd>
+            </dl>
+
+            <dl>
+              <dt><7th</dt>
+              <dt>Seongnam, South Korea</dt>
+              <dd>Park concert @ Bundang central park</dd>
+            </dl>
+
+            <dl>
+              <dt><8th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>The Medici @ DDP</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 July</div>
+          <div class="show_desc">
+            <dl>
+              <dt>1st</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Jisan Valley Rock Pre-Party @ B.One &#8211; Itaewon</dd>
+            </dl>
+
+            <dl>
+              <dt>7th</dt>
+              <dt>Daegu, South Korea</dt>
+              <dd>Party  @ Second Hotel &#8211; Daegu</dd>
+            </dl>
+
+            <dl>
+              <dt>15th</dt>
+              <dt>Ulsan, South Korea</dt>
+              <dd>Party @ Second Hotel &#8211; Ulsan</dd>
+            </dl>
+
+            <dl>
+              <dt>23rd</dt>
+              <dt>Jisan, South Korea</dt>
+              <dd>Jisan Valley Rock Music &amp; Arts Festival @ Jisan Resort</dd>
+            </dl>
+
+            <dl>
+              <dt>29th</dt>
+              <dt>Los Angeles, CA</dt>
+              <dd>KLUB KCON @ The Novo by Microsoft</dd>
+            </dl>
+
+            <dl>
+              <dt>30th</dt>
+              <dt>Los Angeles, CA</dt>
+              <dd>KCON L.A. @ South Exhibit Hall</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 June</div>
+          <div class="show_desc">
+            <dl>
+              <dt>2nd</dt>
+              <dt>Los Angeles, CA</dt>
+              <dd>Spam N Eggs @ Club Bound LA (682 Irolo St.)</dd>
+            </dl>
+
+            <dl>
+              <dt>3th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>You Hee-yeol&#8217;s Sketchbook @ Korean Broadcasting System (KBS 2)</dd>
+            </dl>
+
+            <dl>
+              <dt>4th</dt>
+              <dt>New York City, NY</dt>
+              <dd>DEAN Live in NYC @ Copacabana (268 W 47th St.)</dd>
+            </dl>
+
+            <dl>
+              <dt>11th</dt>
+              <dt>Busan, South Korea</dt>
+              <dd>Party @ Secret Society &#8211; Busan</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 May</div>
+          <div class="show_desc">
+            <dl>
+              <dt>7th</dt>
+              <dt>Taipei, Taiwan</dt>
+              <dd>MTV Asia Music Stage @ MTV Taiwan</dd>
+
+              <dt>13th</dt>
+              <dt>Chicago, IL</dt>
+              <dd>Northwestern KASA Show 2016 @ Northwestern University Ryan Auditorium</dd>
+            </dl>
+
+            <dl>
+              <dt>19th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>@ Seoul Women&#8217;s University</dd>
+              <dd>@ Gongju National University of Education</dd>
+            </dl>
+
+            <dl>
+              <dt>20th</dt>
+              <dt>Yongin, South Korea</dt>
+              <dd>@ Dankuk University (Jukjeon Campus)</dd>
+
+              <dt>Incheon, South Korea</dt>
+              <dd>@ Kyungin Women&#8217;s College</dd>
+            </dl>
+
+            <dl>
+              <dt>23th</dt>
+              <dt>Suwon, South Korea</dt>
+              <dd>@ Kyung Hee University (Suwon Campus)</dd>
+            </dl>
+
+            <dl>
+              <dt>25th</dt>
+              <dt>Ansan, South Korea</dt>
+              <dd>@ Hanyang University (Erica Campus)</dd>
+            </dl>
+
+            <dl>
+              <dt>28th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Seoul Jazz Festival @ Seoul Olympic Park</dd>
+              <dd>21 Party @ Seoul Olympic Park (INVITATION ONLY)</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 April</div>
+          <div class="show_desc">
+            <dt>9th</dt>
+            <p>Seoul, South Korea</p>
+            <ul>
+            <li>Hiphopplaya Festival 2016 @ Nanji Hangang Park</li>
+            </ul>
+
+            <dt>22nd</dt>
+            <p>Seoul, South Korea</p>
+            <ul>
+            <li>Picnic in Spring @ KB Art Hall &#8211; Gangnam</li>
+          </div>
+
+          <div class="show_title">2016 March</div>
+          <div class="show_desc">
+            <dl>
+              <dt>Austin, TX</dt>
+              <dt>15th (Tue.)</dt>
+              <dd>SXSW &#8211; SPOTIFY HOUSE @ Spotify House &#8211; 1501 E 6th St.</dd>
+
+              <dt>16th (Wed.)</dt>
+              <dd>SXSW &#8211; KOCCA KPOP Showcase @ The Belmont</dd>
+
+              <dt>17th (Thu.)</dt>
+            <dd>SXSW &#8211; HYPETRAK @ The Mohawk &#8211; 912 Red River St.</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2016 January</div>
+          <div class="show_desc">
+            <dl>
+              <dt>2nd</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>&#8216;360 Sounds&#8217; 10th Anniversay Party @ Lotte Hotel in Myeongdong</dd>
+            </dl>
+
+            <dl>
+              <dt>9th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>You Hee-yeol&#8217;s Sketchbook @ Korean Broadcasting System (KBS 2)</dd>
+            </dl>
+
+            <dl>
+              <dt>30th</dt>
+              <dt>Los Angeles, CA</dt>
+              <dd>Seoul To LA (as a special guest) @ Resident DTLA (428 S. Hewitt St.)</dd>
+            </dl>
+          </div>
+
+          <div class="show_title">2015</div>
+          <div class="show_desc">
+            <dl>
+              <dt><span style="text-decoration: underline;">JULY</span></dt>
+              <dt>25th</dt>
+              <dt>Atlanta, GA</dt>
+
+              <dd>V 103 Car &amp; Bike Show &#8211; Live remote with Greg Street @ Georgia World Congress Center (285 Andrew Young International Boulevard)<br />
+            </dl>
+
+            <dl>
+              <dt>26th</dt>
+              <dt>Washington D.C.</dt>
+              <dd>Playing his records @ Cities Bar &amp; Lounge (International Square, 919 19th St.)</dd>
+            </dl>
+
+            <dl>
+              <dt>27th</dt>
+              <dd>Interview on Wkys 93.9 (radio)</dd>
+            </dl>
+
+            <dl>
+              <dt>29th</dt>
+              <dt>Miami, FL</dt>
+              <dd>Cool &amp; Dre Studio</dd>
+              <dd>Performance @ Justin&#8217;s (8602 SW 124 Ave.)</dd>
+            </dl>
+
+            <dl>
+              <dt>30th</dt>
+              <dd>Interview on WMIB (103.5 FM) w/ K. Fox &amp; DJ Epps</dd>
+              <dd>Performance @ Story Night Club (DJ Irie) (136 Collins Ave.)</dd>
+            </dl>
+
+            <dl>
+              <dt><span style="text-decoration: underline;">AUGUST</span></dt>
+              <dt><del></del>1st</dt>
+              <dt>Chicago, IL</dt>
+              <dd>Performance @ Shrine (2109 S. Wabash)</dd>
+            </dl>
+
+            <dl>
+              <dt>2nd</dt>
+              <dt>Chicago, IL</dt>
+              <dd>Performance @ Velvet Lounge (100 E. Cermak Rd. )</dd>
+            </dl>
+
+            <dl>
+              <dt><span style="text-decoration: underline;">OCTOBER</span></dt>
+              <dt><del></del>29th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>Beaker 3rd Anniversary Party x Maison Kitsuné Capsule Collection Launch @ Beaker Cheongdam Flagship Store</dd>
+            </dl>
+
+            <dl>
+              <dt><span style="text-decoration: underline;">NOVEMBER</span></dt>
+              <dt><del></del>14th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>HiphopLE 5th Anniversary Party @ The Henz Club in Hongdae</dd>
+
+              <dt>25th</dt>
+              <dd>MBN Hero Concert @ Jamsil Indoor Stadium</dd>
+            </dl>
+
+            <dl>
+              <dt><span style="text-decoration: underline;">DECEMBER</span></dt>
+              <dt>17th</dt>
+              <dt>Seoul, South Korea</dt>
+              <dd>RapBeat Show &#8216;The Collaboration&#8217; @ The AX-Korea</dd>
+            </dl>
+          </div>
+      </section><!-- /upcoming show -->
+
+<!-- ======================================================================= -->
+
+      <section id="news_">
+
+        <div class="news_">
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_5.jpg" alt="Here & Now ft. Mila J (esta. Remix)<"></dt>
+              <dd class="yel">Here &amp; Now ft. Mila J (esta. Remix)</dd>
+            </dl>
+              <!-- <p>Available on iTunes</p> -->
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+            </ul>
+          </div>
+
+          <div class="news_box">
+            <dl>
+              <dt><img src="img/album_6.jpg" alt="I'm Not Sorry remix set"></dt>
+              <dd class="yel">Put My Hands On You ft. Anderson .Paak (prod. by esta. &amp; Mr. Carmack)</dd>
+            </dl>
+            <p>TRACKS  14:35</p>
+            <ul>
+              <li><a class="play_btn">play</a></li>
+              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="download_btn">download</a></li>
+            </ul>
+          </div>
+        </div>
+      </section><!-- /news_ -->
+
+<!-- ======================================================================= -->
+
+    <!-- icon_group-->
+    <center id="icon_group">
+      <a class="fa fa-facebook-square fa-lg yel" href="https://www.facebook.com/deantheofficial"></a>
+      &nbsp
+      <a class="fa fa-soundcloud fa-lg yel" href="https://soundcloud.com/deantheofficial"></a>
+      &nbsp
+      <a class="fa fa-youtube fa-lg yel" href="https://www.youtube.com/channel/UCnCEKlzi52Yzj2JdBFhKVEA"></a>
+      &nbsp
+      <a class="fa fa-instagram fa-lg yel" href="https://instagram.com/deantrbl/"></a>
+      &nbsp
+      <a class="fa fa-twitter fa-lg yel" href="https://twitter.com/deantheofficial"></a>
+      &nbsp
+      <a class="fa fa-envelope fa-lg yel" href="http://officialdean.com/contact/"></a>
+    </center><!-- /icon_group-->
 
 <!-- ======================================================================= -->
 
     </section><!-- /content -->
 
-  </div>
+<!-- ======================================================================= -->
+
+    <!-- footer -->
+    <section id="footer">
+      <div class="footer_logo_box">
+        <img src="img/logo_300x188.png" alt="official dean">
+      </div>
+    </section><!-- /footer -->
+
+<!-- ======================================================================= -->
+
+  </div><!-- /container -->
 </body>
 </html>
