--- a/dean/main.html
+++ b/dean/main.html
@@ -181,18 +181,61 @@
       <!-- sns -->
       <section id="sns">
         <div class="sns_header">
+
+          <!-- instagram_box -->
           <div id="instagram_box">
             <div class="icon_box">
               <a href="https://instagram.com/deantrbl/"><i class="fa fa-instagram yel"></i></a>
             </div>
             <p>Unable to show Instagram photos</p>
-          </div>
+          </div><!-- /instagram_box -->
 
+
+          <!-- twitter_box -->
           <div id="twitter_box">
             <a href="https://twitter.com/deantheofficial"><i class="fa fa fa-twitter yel"></i></a>
-            <aside id="twitter_txt"></aside>
-          </div>
-        </div>
+
+            <aside>
+
+          		<div class="twitter_txt">
+
+        				<div>
+                  single album [limbo]
+                  - track list
+
+                  1. 불청객
+                  2. 넘어와 (ft. 백예린)
+
+                  2017 0217
+
+                  (teaser image)
+                  <a href="https://t.co/qGyxj88pAy" target="_blank">https://t.co/qGyxj88pAy</a>
+                </div>
+
+                <div>
+                  limbo' on 02/17 teaser
+                  <a href="https://twitter.com/search?q=2" title="Search #2" target="_blank">#2</a>
+                  <a href="https://t.co/wkq153Pl7h" target="_blank">https://t.co/wkq153Pl7h</a>
+                </div>
+
+                <div>
+                  new single 'limbo' on 02/17
+                  <a href="https://t.co/wjOXl5lVMh
+                  <a href="https://twitter.com/search?q=DEAN" title="Search #DEAN" target="_blank">#DEAN</a>" target="_blank">https://t.co/wjOXl5lVMh
+                  <a href="https://twitter.com/search?q=DEAN" title="Search #DEAN" target="_blank">#DEAN</a></a>
+                  <a href="https://twitter.com/search?q=limbo" title="Search #limbo" target="_blank">#limbo</a>
+                  <a href="https://t.co/4V1duZ9AQM" target="_blank">https://t.co/4V1duZ9AQM</a>
+                </div>
+
+              </div><!-- /twitter_txt -->
+
+          		<a href="http://twitter.com/deantheofficial">@deantheofficial</a>
+
+            </aside>
+
+          </div><!-- /twitter_box -->
+
+        </div><!-- /sns_header -->
 
         <!-- instagram -->
         <div id="instagram">
