--- a/dean/biography.html
+++ b/dean/biography.html
@@ -16,18 +16,18 @@
     <section class="gnb_wrap" class="yel">
 
       <div id="gnb">
-        <a href="http://officialdean.com/"><img src="img/logo_96x60.png" alt="official dean"></a>
+        <a href="file:///D:/git/study/dean/main.html"><img src="img/logo_96x60.png" alt="official dean"></a>
 
         <ul>
-          <li><a href="#" class="yel">biography</a></li>
+          <li><a href="file:///D:/git/study/dean/biography.html" class="yel">biography</a></li>
           <li><a href="#news" class="yel">news</a></li>
           <li><a href="#sns" class="yel">sns</a></li>
           <li><a href="#upcomingshows" class="yel">upcoming shows</a></li>
-          <li><a href="#" class="yel">contact</a></li>
+          <li><a href="file:///D:/git/study/dean/contact.html" class="yel">contact</a></li>
         </ul>
       </div>
-    </section><!-- /gnb_wrap -->
 
+    </section><!-- /gnb_wrap -->
 <!-- ======================================================================= -->
 
     <!-- content -->
