--- a/dean/contact.html
+++ b/dean/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="img/logo_title.png">
   <title> http://officialdean.com/contact/ </title>
   <link rel="stylesheet" href="css/common.css"/>
   <link rel="stylesheet" href="./css/contact.css"/>
@@ -29,7 +30,7 @@
         <li><a href="file:///D:/git/study/dean/contact.html" class="yel">contact</a></li>
       </ul>
     </div>
-    
+
   </section><!-- /gnb_wrap -->
 
 <!-- ======================================================================= -->
