--- a/dean/main.html
+++ b/dean/main.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="shortcut icon" href="img/logo_title.png">
   <title> http://officialdean.com/ </title>
   <link rel="stylesheet" href="css/common.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/fix.js" charset="utf-8"></script>
+  <script src="js/news.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -30,7 +32,7 @@
           <li><a href="file:///D:/git/study/dean/contact.html" class="yel">contact</a></li>
         </ul>
       </div>
-      
+
     </section><!-- /gnb_wrap -->
 
 <!-- ======================================================================= -->
@@ -67,7 +69,10 @@
 
       <!-- soundcloud -->
       <section id="soundcloud">
-        			<center><iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/213045110&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></center>
+  			<center>
+          <!-- <iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/213045110&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
+          <iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/216522597&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        </center>
       </section><!-- /soundcloud -->
 
 <!-- ======================================================================= -->
@@ -106,6 +111,7 @@
         <h1 class="yel">news</h1>
 
         <div class="news">
+
           <div class="news_box">
             <dl>
               <dt><img src="img/album_1.jpg" alt="I'm Not Sorry"></dt>
@@ -114,8 +120,8 @@
               <p>Available on iTunes</p>
 
             <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
             </ul>
           </div>
 
@@ -127,10 +133,10 @@
             </dl>
               <p>Available on iTunes</p>
 
-            <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
-              <li><a class="download_btn">download</a></li>
+            <ul class="download">
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
+              <li><a class="download_btn download_hover">download</a></li>
             </ul>
           </div>
 
@@ -143,8 +149,8 @@
               <p>Available on iTunes</p>
 
             <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
             </ul>
           </div>
 
@@ -156,8 +162,8 @@
               <p>Available on iTunes</p>
 
             <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
             </ul>
           </div>
 
@@ -169,8 +175,8 @@
               <p>Available on iTunes</p>
 
             <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
             </ul>
           </div>
 
@@ -731,8 +737,8 @@
             </dl>
               <!-- <p>Available on iTunes</p> -->
             <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
             </ul>
           </div>
 
@@ -742,10 +748,10 @@
               <dd class="yel">Put My Hands On You ft. Anderson .Paak (prod. by esta. &amp; Mr. Carmack)</dd>
             </dl>
             <p>TRACKS  14:35</p>
-            <ul>
-              <li><a class="play_btn">play</a></li>
-              <li><a class="play_btn">enqueue</a></li>
-              <li><a class="download_btn">download</a></li>
+            <ul class="download">
+              <li><a class="play_btn btn_hover">play</a></li>
+              <li><a class="play_btn btn_hover">enqueue</a></li>
+              <li><a class="download_btn download_hover">download</a></li>
             </ul>
           </div>
         </div>
