--- a/dean/biography.html
+++ b/dean/biography.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="img/logo_title.png">
   <title> http://officialdean.com/biography/ </title>
   <link rel="stylesheet" href="css/common.css"/>
   <link rel="stylesheet" href="css/biography.css"/>
