--- a/dean/contact.html
+++ b/dean/contact.html
@@ -20,14 +20,14 @@
   <section class="gnb_wrap" class="yel">
 
     <div id="gnb">
-      <a href="file:///D:/git/study/dean/main.html"><img src="img/logo_96x60.png" alt="official dean"></a>
+      <a href="main.html"><img src="img/logo_96x60.png" alt="official dean"></a>
 
       <ul>
-        <li><a href="file:///D:/git/study/dean/biography.html" class="yel">biography</a></li>
+        <li><a href="biography.html" class="yel">biography</a></li>
         <li><a href="#news" class="yel">news</a></li>
         <li><a href="#sns" class="yel">sns</a></li>
         <li><a href="#upcomingshows" class="yel">upcoming shows</a></li>
-        <li><a href="file:///D:/git/study/dean/contact.html" class="yel">contact</a></li>
+        <li><a href="contact.html" class="yel">contact</a></li>
       </ul>
     </div>
 
@@ -61,16 +61,14 @@
     <center id="icon_group">
 
       <a class="fa fa-facebook-square fa-lg yel" href="https://www.facebook.com/deantheofficial"></a>
-      &nbsp
+      &nbsp&nbsp
       <a class="fa fa-soundcloud fa-lg yel" href="https://soundcloud.com/deantheofficial"></a>
-      &nbsp
+      &nbsp&nbsp
       <a class="fa fa-youtube fa-lg yel" href="https://www.youtube.com/channel/UCnCEKlzi52Yzj2JdBFhKVEA"></a>
-      &nbsp
+      &nbsp&nbsp
       <a class="fa fa-instagram fa-lg yel" href="https://instagram.com/deantrbl/"></a>
-      &nbsp
+      &nbsp&nbsp
       <a class="fa fa-twitter fa-lg yel" href="https://twitter.com/deantheofficial"></a>
-      &nbsp
-      <a class="fa fa-envelope fa-lg yel" href="http://officialdean.com/contact/"></a>
 
     </center><!-- /icon_group-->
 
