--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/ico" href="http://ho-ginza.com/img/favicon.ico" />
   <title>http://ho-ginza.com/</title>
   <link rel="stylesheet" href="style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="intro.js" charset="utf-8"></script>
-  <script src="fix.js" charset="utf-8"></script>
+  <script src="js/intro.js" charset="utf-8"></script>
+  <script src="js/fix.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -54,6 +55,7 @@
 
           <div class="l"></div>
 
+          <!-- lnb_list -->
           <ul class="lnb_list">
             <li>
               <a href="#notice"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
@@ -141,7 +143,7 @@
 
 <!-- ======================================================================= -->
 
-    <div id="partition_2">
+    <div class="partition_2">
       <div class="partition" style="float:right;"></div>
     </div>
 
@@ -150,7 +152,7 @@
 
     <!-- access -->
     <section id="access">
-      <div id="access_txt">
+      <div class="access_txt">
         <h2><img src="img/access_tit.png" alt=""></h2>
 
         <ul>
@@ -163,7 +165,7 @@
       </div>
 
       <!-- map -->
-      <div id="map_area">
+      <div class="map_area">
         <img src="img/map.png" id="map" alt="">
       </div>
       <!-- /map -->
@@ -183,7 +185,7 @@
 
     <!-- footer -->
     <section id="footer">
-      <div id="footer_txt">
+      <div class="footer_txt">
         <h2>鵬 -HO-</h2>
 				<p class="address">所在地 〒104-0061 ​東京都中央区銀座6-7-6 銀座細野ビル2階<br>
 					連絡先 TEL：03-6264-5635　※予約制<br>
