--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -130,13 +130,13 @@
       Därför utvecklar vi idag allt från produkter till städer.</p>
 
       <div class="button_group">
-        <button type="button" class="btn  pt-cv-filter-option active" data-value="all" data-sftype="button">Alla</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="residential-buildings" data-sftype="button">Bostäder</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="interior-architecture" data-sftype="button">Inredning</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="commercial-buildings" data-sftype="button">Kommersiellt</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="public-buildings" data-sftype="button">Offentligt</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="product-design" data-sftype="button">Produktdesign</button>
-        <button type="button" class="btn  pt-cv-filter-option " data-value="urbandesign" data-sftype="button">Stadsutveckling</button>
+        <button type="button">Alla</button>
+        <button type="button">Bostäder</button>
+        <button type="button">Inredning</button>
+        <button type="button">Kommersiellt</button>
+        <button type="button">Offentligt</button>
+        <button type="button">Produktdesign</button>
+        <button type="button">Stadsutveckling</button>
       </div>
     </div>
 
