--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -22,8 +22,6 @@
   <!-- gnb -->
   <div class="gnb">
     <a href="#"><img src="img/sa_b_170x63.png" class="logo" alt="sandellsandberg"></a>
-
-    <!-- menu -->
     <ul>
       <li><a href="#">Om oss</a></li>
       <li><a href="#">Aktuellt</a></li>
@@ -31,10 +29,11 @@
       <li><a href="#">Jobb</a></li>
       <li><a href="#">Kontakt</a></li>
     </ul>
-    <!-- /menu -->
-
   </div>
   <!-- /gnb -->
+
+
+
 
   <!-- content -->
   <div class="content">
@@ -111,11 +110,13 @@
             <p>Sandellsandberg och Riksbyggen har utsetts till vinnare i en markanvisningstävling för att transformera Fredriksskans idrottsplats. Tävlingsförslaget ”Fredriksskans 365” innehåller både hyresrätter och bostadsrätter, totalt ca 125 lägenheter.</p>
             <a href="http://www.sandellsandberg.se/content/fredriksskans-365/">Läs mer.</a>
           </div>
+
           <div class="desc">
             <img src="img/aktuellt_2.jpg" alt="">
             <h3>IKEA PS 2017 - Sidobord med hjul</h3>
             <p>&quot;Jag älskar att skapa nya produkter på fabriksgolvet. Att faktiskt kunna röra vid materialet och förstå produktionen gör hela jobbet så mycket roligare. IKEA PS 2017 sidobord med hjul är resultatet av en sådan resa. Ett flyttbart soffbord som kan användas på många olika ställen.&quot; — Thomas Sandell.</p>
           </div>
+
           <div class="desc">
             <img src="img/aktuellt_3.jpg" alt="">
             <h3>Vill du rita morgondagens skola?</h3>
@@ -131,9 +132,12 @@
       <!-- /row -->
 
     </div>
-    <!-- aktuellt -->
+    <!-- /aktuellt -->
 
-    <div id="projekt" class="row desc">
+
+
+    <!-- projekt -->
+    <div id="projekt" class="row">
       <h1>Projekt</h1>
       <p>En stark idé utgör alltid utgångspunkten för vår projektprocess. För att behålla vår personlighet, lekfullhet, kreativitet och särprägel jobbar vi brett med ett öppet synsätt.<br />
       Därför utvecklar vi idag allt från produkter till städer.</p>
@@ -148,37 +152,108 @@
         <button type="button">Stadsutveckling</button>
       </div>
 
-      <article>
-        <div class="projekt_article">
-          <img src="img/projekt_1.jpg" alt="">
-          <a href="http://www.sandellsandberg.se/content/fredriksskans-365/" class="_self cvplbd" target="_self" >Fredriksskans 365</a>
+      <article class="projekt_article">
 
-          <img src="img/projekt_2.jpg" alt="">
-          <img src="img/projekt_3.jpg" alt="">
-          <img src="img/projekt_4.jpg" alt="">
-          <img src="img/projekt_5.jpg" alt="">
-          <img src="img/projekt_6.jpg" alt="">
-          <img src="img/projekt_7.jpg" alt="">
-          <img src="img/projekt_8.jpg" alt="">
-          <img src="img/projekt_9.jpg" alt="">
-          <img src="img/projekt_10.jpg" alt="">
-          <img src="img/projekt_11.jpg" alt="">
-          <img src="img/projekt_12.jpg" alt="">
-          <img src="img/projekt_13.jpg" alt="">
-          <img src="img/projekt_14.jpg" alt="">
-          <img src="img/projekt_15.jpg" alt="">
-          <img src="img/projekt_16.jpg" alt="">
-          <img src="img/projekt_17.jpg" alt="">
-          <img src="img/projekt_18.jpg" alt="">
-          <img src="img/projekt_19.jpg" alt="">
-          <img src="img/projekt_20.jpg" alt="">
-        </div>
+        <img src="img/projekt_1.jpg" alt="">
+        <a href="http://www.sandellsandberg.se/content/fredriksskans-365/" class="_self cvplbd" target="_self" >Fredriksskans 365</a>
+
+        <img src="img/projekt_2.jpg" alt="">
+        <img src="img/projekt_3.jpg" alt="">
+        <img src="img/projekt_4.jpg" alt="">
+        <img src="img/projekt_5.jpg" alt="">
+        <img src="img/projekt_6.jpg" alt="">
+        <img src="img/projekt_7.jpg" alt="">
+        <img src="img/projekt_8.jpg" alt="">
+        <img src="img/projekt_9.jpg" alt="">
+        <img src="img/projekt_10.jpg" alt="">
+        <img src="img/projekt_11.jpg" alt="">
+        <img src="img/projekt_12.jpg" alt="">
+        <img src="img/projekt_13.jpg" alt="">
+        <img src="img/projekt_14.jpg" alt="">
+        <img src="img/projekt_15.jpg" alt="">
+        <img src="img/projekt_16.jpg" alt="">
+        <img src="img/projekt_17.jpg" alt="">
+        <img src="img/projekt_18.jpg" alt="">
+        <img src="img/projekt_19.jpg" alt="">
+        <img src="img/projekt_20.jpg" alt="">
 
       </article>
+      <!-- /projekt_article -->
+
+      <div><button>Visa fler<span class="caret"></span></button></div>
     </div>
+    <!-- /projekt -->
+
+
+
+    <!-- job -->
+    <div id="job">
+      <div class="row">
+        <h1>Bli en av oss</h1>
+        <div class="desc">
+          <p>På sandellsandberg jobbar människor med lång erfarenhet sida vid sida med nyutexaminerade arkitekter och ingenjörer. Tillsammans skapar vi dynamik när vi tar oss an nya projekt. Och även om vi har olika bakgrund har vi målet satt lika högt och långt fram.</p>
+          <a href="#1463405691909-96bd2f22-1e7f" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">Ansök nu!</span><i class="vc_tta-icon fa fa-chevron-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <!-- /job -->
+
+
+
+    <!-- Kontakt -->
+    <div id="kontakt" class="row">
+      <h1>Kontakt</h1>
+
+      <div class="btn_group">
+        <button type="button">Kontor</button>
+        <button type="button">Ledning</button>
+        <button type="button">Arkitekter</button>
+        <button type="button">Kommersiellt</button>
+        <button type="button">Inredningsarkitekter</button>
+        <button type="button">Byggnadsingenjörer</button>
+        <button type="button">Visualiserare</button>
+        <button type="button">Administrati</button>
+      </div>
+
+      <div class="desc">
+        <div class="txt">
+          <h4>sandellsandberg arkitekter AB</h4>
+          <h5>Döbelnsgatan 54<br />
+          113 52 Stockholm</h5>
+          <h5>+46 (0) 8 506 531 00<br />
+          <span style="color: #000000; font-size: 18px;"><a style="color: #000000; font-size: 18px;" href="mailto:info@sandellsandberg.se">info@sandellsandberg.se</a></span><br />
+          <span style="color: #000000; font-size: 18px;"> <a style="color: #000000; font-size: 18px;" href="mailto:press@sandellsandberg.se">press@sandellsandberg.se</a></span></h5>
+        </div>
+
+        <div class="map">
+          <script type="text/javascript">
+	(function($){
+		$('head').append('<style type="text/css">    /*Tabs*/\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a {\n        border-radius:0px;\n        border-color: #ffffff;\n        font-size: 14px !important;	\n		color: #ffffff;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab:not(.vc_active) a {\n		background-color: #0c0c0c !important;\n	}\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a:hover {\n		color: #000000 !important;\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n	}\n\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a{\n		color: #000000;\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a:hover{\n		background-color: #dbdbdb !important;\n	}\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs.classic_empty .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a{\n        border-radius:0px !important;\n        border-color: #ffffff !important; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-panels-container .vc_tta-panel{\n        background-color: ; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-panel .vc_tta-panel-body{\n    }\n    /*Accordion*/\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-panel .vc_tta-panel-heading{\n        border-color: #ffffff; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading{\n		background-color: #0c0c0c !important;\n		border-radius:0px;	\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading:hover{\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading{\n		background-color: #dbdbdb !important;\n		border-radius:0px;	\n		border-color: !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-body{\n        background-color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading h4 a{\n		color:#ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading h4 a:hover{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a i:before, #tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a i:after{\n		border-color: #000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a i:before, #tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a i:after{\n		border-color: #ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		color:#ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text:hover{\n		color:#000000 !important;\n    }\n    /* Tour*/\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab:not(.vc_active) a{\n		background-color: #0c0c0c !important;\n		color:#ffffff !important;\n\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab:not(.vc_active) a:hover{\n		background-color: #dbdbdb !important;\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a{\n		background-color: #dbdbdb !important;\n		color:#000000 !important;\n		border-color: !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a:before, #tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a:after{\n		border-color: #000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a:before, #tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a:after{\n		border-color: #ffffff !important;\n    }\n    /*Separator*/\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs:not(.big_icon) .vc_tta-panels-container:before{\n		top:-0px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs:not(.big_icon) .vc_tta-panels-container:after{\n		bottom:-0px !important;\n    }\n</style>');
+		$("#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion.underline .vc_tta-title-text").each(function(){
+			var accordion_text = $(this).text();
+			$(this).text(" ");
+			$(this).append("<div class='accordion_inner_text'>" + accordion_text + "</div>");
+		});
+
+		$("#tabid_58b190db7415f .vc_tta-accordion .vc_tta-panels .vc_tta-panel").each(function(){
+			var $icon = $(this).find(".vc_tta-icon");
+			if($icon[0]){
+				$(this).find(".vc_tta-panel-title").addClass("hasIcon");
+			}
+		});
+
+	})(jQuery);
+</script>
+
+        </div>
+      </div>
+    </div>
+    <!-- /Kontakt -->
 
   </div>
   <!-- /content -->
+
+
 
 
 </body>
